<resources>
    <string name="app_name">MedApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Medications</string>
    <string name="title_settings">Settings</string>
    <string name="next">Next</string>
    <string name="start">Start</string>
    <string name="Headline">Time is generally the best doctor.</string>
    <string name="enter_your_user_id">Enter Your Email</string>
    <string name="password">Password:</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="login">LogIn</string>
    <string name="register">Register</string>
    <string name="textview">TextView</string>
    <string name="register_here">Register Here</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pill_schedule">Pill Schedule</string>
    <string name="settings">Settings</string>
    <string name="report_a_problem">Report a problem</string>
    <string name="share_app">Share App</string>
    <string name="love_it">Love It</string>
    <string name="reminders">Reminders</string>
    <string name="appointments">Appointments</string>
    <string name="reports">Reports</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="address">Address</string>
    <string name="enter_your_address">Enter Your Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_user_id_reg">Enter your user id</string>
    <string name="password_register">Password</string>
    <string name="home">Home</string>
    <string name="cardiologist">Cardiologist</string>
    <string name="eye">Eye</string>
    <string name="naman">Dr. Naman Agarwal</string>
    <string name="himanshu">Dr. Himanshu</string>
    <string name="rohan">Dr. Rohan</string>
    <string name="fardin">Dr. Farddin</string>
    <string name="description">aaaaaaa aaaaaaaaaaaaaa aaaaaaaaaaaaaaa aaaaaaaaaaaaaaa aaaaaaa</string>
    <string name="polio">Polio</string>
    <string name="vaccine">Vaccine</string>
    <string name="assertion">Affirmation</string>
    <string name="specialist">Specialist</string>
    <string name="affirmation1">Medicine is a science of uncertainty and the art of probability.</string>
    <string name="affirmation2">The good physician treats the disease; the great physician treats the patient who has the disease.</string>
    <string name="affirmation3">The aim of medicine is to prevent disease and prolong life; the ideal of medicine is to eliminate the need of a physician.</string>
    <string name="affirmation4">The life so short, the craft so long to learn.</string>
    <string name="affirmation5">The best doctor gives the least medicines.</string>
    <string name="affirmation6">Medicine cure diseases but only doctors can cure patients.</string>
    <string name="affirmation7">God cannot be everywhere so He sent the Doctors with excellence and selflessness.</string>
    <string name="affirmation8">Medicines can cure, but a good doctor’s inspirational words can give the strength to fight from within.</string>
    <string name="affirmation9">Things will unfold at precisely the right time.</string>
    <string name="affirmation10">I will be present in all the moments that this day brings.</string>
    <string name="contact_doctor">Contact Doctor</string>
    <string name="search_google">Search Google</string>
    <string name="want_advice_on_covid_19">Want advice on COVID-19</string>
    <string name="categories">Categories</string>
    <string name="list_of_doctors">List Of Doctors</string>
    <string name="let_s_sign_you_in">Lets Sign You In</string>
    <string name="welcome_back_you_had_been_off_for_long_time">Welcome back! You had been off for long time</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">or</string>
    <string name="dont_have_an_account">Dont have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="lorem_lpsum_is_simly_dummy_text_of_the_printing_and_typesetting_industry_lorem_lpum_has_beem">lorem_lpsum_is_simly_dummy_text_of_the_printing_and_typesetting_industry_lorem_lpum_has_beem</string>
    <string name="www_1mg_com">www.1mg.com</string>
    <string name="www_netmeds_com">www.netmeds.com</string>
    <string name="www_gogomeds_com">www.gogomeds.com</string>
    <string name="www_medibuddy_in">www.medibuddy.in</string>
    <string name="www_mchemist_com">www.mchemist.com</string>
    <string name="www_pharmeasy_in">www.pharmeasy.in</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="daily">Daily</string>
    <string name="month">Month</string>
    <string name="frequency">frequency</string>
    <string name="duaration">Duration</string>
    <string name="password_confirm">Confirm password</string>
    <string name="enter_your_confirm_password">Confirm password</string>

    <string name="name_error">Please enter your name</string>
    <string name="phone_error">Please enter your phone number</string>
    <string name="email_error">Please enter your email address</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="password_error">Please enter a password</string>
    <string name="error_invalid_password">Please enter a minimum password of 6 characters</string>
    <string name="password_not_same">Passwords Not same</string>

</resources>